# fastapi-scrapy-demo

./: .gitignore  README.md  pyproject.toml  run.py
app/: main.py  pipelines.py  settings.py
app/api/: dependencies.py
app/api/endpoints/: monitoring.py  spiders.py
app/core/: config.py  resources.py
app/models/: schemas.py
app/spiders/: base_spider.py  example_spider.py  spider_runner.py
